Add service implementation
