# pkg/server/server.go
@@ -2,6 +2,7 @@ package server
 
 import (
 	"context"
+	"strings"
 
 	"github.com/bitstored/file-service/pb"
 	"github.com/bitstored/file-service/pkg/service"
@@ -16,6 +17,7 @@ type Server struct {
 func NewServer(s *service.Service) *Server {
 	return &Server{s}
 }
+
 func (s *Server) CreateDrive(ctx context.Context, in *pb.CreateDriveRequest) (*pb.CreateDriveResponse, error) {
 
 	// TODO Verify auth
@@ -49,41 +51,300 @@ func (s *Server) CreateNewFolder(ctx context.Context, in *pb.CreateNewFolderRequ
 	}
 	return rsp, nil
 }
+
 func (s *Server) CreateNewFile(ctx context.Context, in *pb.CreateNewFileRequest) (*pb.CreateNewFileResponse, error) {
 	file := in.File
 	if file.Content == nil {
 		return nil, status.Error(codes.InvalidArgument, "File content can't be nil")
 	}
 
-	return nil, nil
+	var name string
+	strings.Trim(file.GetName(), name)
+	if name == "" {
+		return nil, status.Error(codes.InvalidArgument, "File name can't be empty")
+	}
+
+	if len(in.GetSecretPhrase()) == 0 {
+		return nil, status.Error(codes.InvalidArgument, "Secret phrase can't be empty")
+	}
+
+	var Type string
+	switch file.GetFileType() {
+	case pb.Type_IMAGE:
+		Type = "PNG"
+	case pb.Type_PDF:
+		Type = "PDF"
+	default:
+		Type = "TXT"
+	}
+
+	identifier, err := s.Service.CreateNewFile(ctx, in.GetUserId(), name, file.GetParentIdentifier(), Type, file.Writable, file.Private, file.Content, in.SecretPhrase)
+	if err != nil {
+		return nil, status.Error(codes.Internal, err.Error())
+	}
+
+	resp := &pb.CreateNewFileResponse{
+		ResponseCode:    codes.OK.String(),
+		ResponseMessage: "File created with success",
+		FileId:          identifier,
+	}
+
+	return resp, nil
 }
+
 func (s *Server) GetFolderContent(ctx context.Context, in *pb.GetFolderContentRequest) (*pb.GetFolderContentResponse, error) {
-	return nil, nil
+	var uid string
+	strings.Trim(in.GetUserId(), uid)
+	if uid == "" {
+		return nil, status.Error(codes.InvalidArgument, "UserID can't be empty")
+	}
+	var fid string
+	strings.Trim(in.GetIdentifier(), fid)
+	if fid == "" {
+		return nil, status.Error(codes.InvalidArgument, "FolderID can't be empty")
+	}
+
+	level, err := s.Service.GetFolderContent(ctx, uid, fid)
+	if err != nil {
+		return nil, err
+	}
+
+	rsp := new(pb.GetFolderContentResponse)
+	rsp.Content = level
+	rsp.ResponseCode = codes.OK.String()
+	rsp.ResponseMessage = "Folder listed"
+
+	return rsp, nil
 }
+
 func (s *Server) GetFileContent(ctx context.Context, in *pb.GetFileContentRequest) (*pb.GetFileContentResponse, error) {
-	return nil, nil
+	var uid string
+	strings.Trim(in.GetUserId(), uid)
+	if uid == "" {
+		return nil, status.Error(codes.InvalidArgument, "UserID can't be empty")
+	}
+	var fid string
+	strings.Trim(in.GetIdentifier(), fid)
+	if fid == "" {
+		return nil, status.Error(codes.InvalidArgument, "FileID can't be empty")
+	}
+
+	file, err := s.Service.GetFileContent(ctx, uid, fid, in.GetType(), in.GetSecretKey())
+	if err != nil {
+		return nil, status.Error(codes.Internal, err.Error())
+	}
+
+	rsp := new(pb.GetFileContentResponse)
+	rsp.File = file
+
+	return rsp, nil
 }
+
 func (s *Server) GetFileTree(ctx context.Context, in *pb.GetFileTreeRequest) (*pb.GetFileTreeResponse, error) {
+	// TODO: implement
 	return nil, nil
 }
+
 func (s *Server) UpdateFileContent(ctx context.Context, in *pb.UpdateFileContentRequest) (*pb.UpdateFileContentResponse, error) {
-	return nil, nil
+	var uid string
+	strings.Trim(in.GetUserId(), uid)
+	if uid == "" {
+		return nil, status.Error(codes.InvalidArgument, "UserID can't be empty")
+	}
+	var fid string
+	strings.Trim(in.GetIdentifier(), fid)
+	if fid == "" {
+		return nil, status.Error(codes.InvalidArgument, "FileID can't be empty")
+	}
+
+	err := s.Service.UpdateFileContent(ctx, uid, fid, in.GetFileType(), in.GetSecretKey(), in.GetNewContent())
+	if err != nil {
+		return nil, status.Error(codes.Internal, err.Error())
+	}
+	rsp := new(pb.UpdateFileContentResponse)
+	rsp.ResponseCode = codes.Internal.String()
+	rsp.ResponseMessage = "File update successful"
+
+	return rsp, err
 }
+
 func (s *Server) DeleteFile(ctx context.Context, in *pb.DeleteFileRequest) (*pb.DeleteFileResponse, error) {
-	return nil, nil
+	var uid string
+	strings.Trim(in.GetUserId(), uid)
+	if uid == "" {
+		return nil, status.Error(codes.InvalidArgument, "UserID can't be empty")
+	}
+	var fid string
+	strings.Trim(in.GetIdentifier(), fid)
+	if fid == "" {
+		return nil, status.Error(codes.InvalidArgument, "FileID can't be empty")
+	}
+
+	err := s.Service.DeleteFile(ctx, uid, fid)
+	if err != nil {
+		return nil, status.Error(codes.Internal, err.Error())
+	}
+
+	rsp := new(pb.DeleteFileResponse)
+	rsp.ResponseCode = codes.OK.String()
+	rsp.ResponseMessage = "File deleted successfully"
+	return rsp, nil
 }
+
 func (s *Server) RenameFile(ctx context.Context, in *pb.RenameFileRequest) (*pb.RenameFileResponse, error) {
-	return nil, nil
+	var uid string
+	strings.Trim(in.GetUserId(), uid)
+	if uid == "" {
+		return nil, status.Error(codes.InvalidArgument, "UserID can't be empty")
+	}
+	var fid string
+	strings.Trim(in.GetIdentifier(), fid)
+	if fid == "" {
+		return nil, status.Error(codes.InvalidArgument, "FileID can't be empty")
+	}
+	var name string
+	strings.Trim(in.GetName(), name)
+	if name == "" {
+		return nil, status.Error(codes.InvalidArgument, "New file name can't be empty")
+	}
+
+	err := s.Service.RenameFile(ctx, uid, fid, name)
+	if err != nil {
+		return nil, status.Error(codes.Internal, err.Error())
+	}
+
+	rsp := new(pb.RenameFileResponse)
+	rsp.ResponseCode = codes.OK.String()
+	rsp.ResponseMessage = "File renamed successfully"
+	return rsp, nil
 }
-func (s *Server) MoveFile(ctx context.Context, in *pb.MoveFileRequest) (*pb.UploadFileResponse, error) {
-	return nil, nil
+
+func (s *Server) MoveFile(ctx context.Context, in *pb.MoveFileRequest) (*pb.MoveFileResponse, error) {
+	var uid string
+	strings.Trim(in.GetUserId(), uid)
+	if uid == "" {
+		return nil, status.Error(codes.InvalidArgument, "UserID can't be empty")
+	}
+	var fid string
+	strings.Trim(in.GetIdentifier(), fid)
+	if fid == "" {
+		return nil, status.Error(codes.InvalidArgument, "FileID can't be empty")
+	}
+	var did string
+	strings.Trim(in.GetDestination(), did)
+	if did == "" {
+		return nil, status.Error(codes.InvalidArgument, "Destination identifier can't be empty")
+	}
+	var sid string
+	strings.Trim(in.GetDestination(), sid)
+	if sid == "" {
+		return nil, status.Error(codes.InvalidArgument, "Source identifier can't be empty")
+	}
+	err := s.Service.MoveFile(ctx, uid, fid, sid, did, in.GetCopy())
+	if err != nil {
+		return nil, status.Error(codes.Internal, err.Error())
+	}
+
+	rsp := new(pb.MoveFileResponse)
+	rsp.ResponseCode = codes.OK.String()
+	rsp.ResponseMessage = "File renamed successfully"
+	return rsp, nil
 }
+
 func (s *Server) UploadFile(ctx context.Context, in *pb.UploadFileRequest) (*pb.UploadFileResponse, error) {
-	return nil, nil
+	file := in.File
+	if file.Content == nil {
+		return nil, status.Error(codes.InvalidArgument, "File content can't be nil")
+	}
+	var uid string
+	strings.Trim(in.GetUserId(), uid)
+	if uid == "" {
+		return nil, status.Error(codes.InvalidArgument, "UserID can't be empty")
+	}
+	var name string
+	strings.Trim(file.GetName(), name)
+	if name == "" {
+		return nil, status.Error(codes.InvalidArgument, "File name can't be empty")
+	}
+	if len(in.GetSecretPhrase()) == 0 {
+		return nil, status.Error(codes.InvalidArgument, "Secret phrase can't be empty")
+	}
+	var did string
+	strings.Trim(file.GetParentIdentifier(), did)
+	if did == "" {
+		return nil, status.Error(codes.InvalidArgument, "Parent identifier can't be empty")
+	}
+
+	var Type string
+	switch file.GetFileType() {
+	case pb.Type_IMAGE:
+		Type = "PNG"
+	case pb.Type_PDF:
+		Type = "PDF"
+	default:
+		Type = "TXT"
+	}
+
+	identifier, message, err := s.Service.UploadFile(ctx, uid, name, did, Type, file.Writable, file.Private, file.Content, in.SecretPhrase)
+	if err != nil {
+		return nil, status.Error(codes.Internal, err.Error())
+	}
+
+	resp := &pb.UploadFileResponse{
+		ResponseCode:     codes.OK.String(),
+		ResponseMessage:  "File created with success",
+		FileId:           identifier,
+		WatermarkMessage: message,
+	}
+
+	return resp, nil
 }
+
 func (s *Server) ShareFile(ctx context.Context, in *pb.ShareFileRequest) (*pb.ShareFileResponse, error) {
+	// TODO: implement methods
 	return nil, nil
 }
+
 func (s *Server) DownloadFile(ctx context.Context, in *pb.DownloadFileRequest) (*pb.DownloadFileResponse, error) {
-	return nil, nil
+	var uid string
+	strings.Trim(in.GetUserId(), uid)
+	if uid == "" {
+		return nil, status.Error(codes.InvalidArgument, "UserID can't be empty")
+	}
+	var fid string
+	strings.Trim(in.GetIdentifier(), fid)
+	if fid == "" {
+		return nil, status.Error(codes.InvalidArgument, "File identifier can't be empty")
+	}
+	if len(in.GetSecretPhrase()) == 0 {
+		return nil, status.Error(codes.InvalidArgument, "Secret phrase can't be empty")
+	}
+	var steganoMessage []byte = nil
+	if len(in.GetSteganoMessage()) != 0 {
+		steganoMessage = in.GetSteganoMessage()
+	}
+	var watermarkImage []byte = nil
+	if len(in.GetWatermarkImage()) != 0 {
+		watermarkImage = in.GetWatermarkImage()
+	}
+	var watermarkMessage string = ""
+	if len(in.GetWatermarkMessage()) != 0 {
+		watermarkMessage = in.GetWatermarkMessage()
+	}
+
+	var did string
+	strings.Trim(in.GetSourceId(), did)
+	if did == "" {
+		return nil, status.Error(codes.InvalidArgument, "Parent identifier can't be empty")
+	}
+	file, err := s.Service.DownloadFile(ctx, uid, fid, in.GetSecretPhrase(), watermarkMessage, steganoMessage, watermarkImage)
+	if err != nil {
+		return nil, status.Error(codes.Internal, err.Error())
+	}
+
+	rsp := new(pb.DownloadFileResponse)
+	rsp.File = file
+	rsp.ResponseCode = codes.OK.String()
+	rsp.ResponseMessage = "File downloaded"
+	return rsp, nil
 }
